@@ -1,5 +1,6 @@
 Changes for 1.8.2
 
+ - [ZBX-2062] fixed sending of recovery messages multiple times (Sasha)
  - [ZBX-1878] reverted map label background drawing (Aly)
  - [ZBX-2016] fixed code with "_itow_s()" and "zbx_wsnprintf" to avoid possible run-time memory corruption. Thanks to Takanori Suzuki. (Dmitry)
  - [ZBX-2059] fixed special char treatment in XML export (Aly)
